this is an asignment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,2 @@
-Welcome to my website.
-
-im going to work on this in class.
-
-Hello.
+Welcome to my website.  im going to work on this in class.
+Tarsier
