making my index valid

--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-Welcome to my website.  im going to work on this in class.
-Tarsier
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>My Homepage</title>
+		<style>
+		body{
+			background-color:brown;
+		}
+		</style>
+		<script src="js/validate.js"></script>
+		</script>
+	</head>
+	<body>
+		<p>Welcome to my homepage</p>
+	</body>
+</html>
