updating my webstie

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 		<title>My Homepage</title>
 		<style>
 		body{
-			background-color:brown;
+			background-color:yellow;
 		}
 		</style>
 		<script src="js/validate.js"></script>
 		</script>
 	</head>
 	<body>
-		<p>Welcome to my homepage</p>
+		<h1>Welcome!</h1>
+		<p>This to my homepage.
+		I plan on expanding this in the future!</p>
+
+		<p><q>Sometimes, I dream about cheese.</q>- Cristian Castro</p>
+	
 	</body>
 </html>
