validating my website

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			background-color:yellow;
 		}
 		</style>
-		<script src="js/validate.js"></script>
+		<script src="..js/validate.js">
 		</script>
 	</head>
 	<body>
