procrastination, my worst enemy

--- a/projects/recipes/index.html
+++ b/projects/recipes/index.html
@@ -5,8 +5,9 @@
 		<script> src="../../js/validate.js"></script>
 	</head>
 	<body>
-		<p>placeholder</p>
-		<a href="1.html">placeholder</a>
-		<a href="2.html">placeholder</a>
+		<h1>Welcome!</h1>
+		<p>Hello and welcome to my recipe website!</p>
+		<a href="1.html">Scrambled eggs.jpeg</a>
+		<a href="2.html">Garlic Butter Pasta.jpeg</a>
 	</body>
 </html>
