will this work?

--- a/projects/recipes/1.html
+++ b/projects/recipes/1.html
@@ -5,6 +5,7 @@
 		<script> src="../../js/validate.js"></script>
 	</head>
 	<body>
-		<p>placeholder</p>	
+		<p>placeholder</p>
+		<img src="Desktop/Scrambled eggs.jpeg"width="250" height="150">
 	</body>
 </html>
