--- a/projects/recipes/index.html
+++ b/projects/recipes/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Welcome!</h1>
 		<p>Hello and welcome to my recipe website!</p>
-		<a href="1.html">Scrambled eggs.jpeg</a>
-		<a href="2.html">Garlic Butter Pasta.jpeg</a>
+		<a href="1.html">Click here for my Scrambled Eggs recipe</a>
+		<a href="2.html">Click here for my Garlic Butter Pasta recipe</a>
 	</body>
 </html>
