will it work now?

--- a/projects/recipes/1.html
+++ b/projects/recipes/1.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 		<p>placeholder</p>
-		<img src="Desktop/Scrambled eggs.jpeg"width="250" height="150">
+		<img src="/uploads/media/default/0001/03/Scrambled eggs.jpeg" width="250" height="150">
 	</body>
 </html>
