--- a/projects/recipes/1.html
+++ b/projects/recipes/1.html
@@ -5,7 +5,15 @@
 		<script> src="../../js/validate.js"></script>
 	</head>
 	<body>
-		<p>placeholder</p>
+		<h1>Scrambled Eggs with Cheese</h1>
 		<img src="/Users/1001304/Desktop/Scrambled eggs.jpeg" width="250" height="150">
+		<p><strong>Time: </strong>5-7 minutes<br><strong>Servings: </strong>1-2</p>
+		<p><strong>Ingredients: </strong></p>
+		<ul>
+			<li>2-3 eggs</li>
+			<li>1 tbsp butter or oil</li>
+			<li>Salt and pepper</li>
+			<li>2 tbsp shredded cheese</li>
+		</ul>
 	</body>
 </html>
