--- a/projects/recipes/1.html
+++ b/projects/recipes/1.html
@@ -15,5 +15,12 @@
 			<li>Salt and pepper</li>
 			<li>2 tbsp shredded cheese</li>
 		</ul>
+		<ol>
+			<li>Crack eggs onto a bowl and throw a pinch of salt and pepper in</li>
+			<li>Heat butter in a pan over a medium heat</li>
+			<li>Pour in the eggs and stir gently with a spatula</li>
+			<li>When the eggs start to set, sprinkle in some cheese</li>
+			<li>Stir until the eggs are creamy and fully cooked</li>
+			<li>Enjoy!</li>
 	</body>
 </html>
