--- a/projects/recipes/2.html
+++ b/projects/recipes/2.html
@@ -5,6 +5,24 @@
 		<script> src="../../js/validate.js"></script>
 	</head>
 	<body>
-		<p>placeholder</p>	
+		<h1>Garlic Butter Pasta</h1>
+		<img src="/Users/1001304/Desktop/Garlic Butter Pasta.jpeg" width="250" height="150">
+		<p><strong>Time: </strong>15-20 minutes<br><strong>Servings: </strong>2</p>
+		<p><strong>Ingredients: </strong></p>
+		<ul>
+			<li>200g (7 oz) Spaghetti</li>
+			<li>2 tbsp butter</li>
+			<li>3 cloves garlic (minced)</li>
+			<li>2 cups water or broth</li>
+			<li>Salt and pepper</li>
+			<li>Optional: grated Parmesan or Parsley</li>
+		</ul>
+		<ol>
+			<li>In a pot, melt butter over a medium heat</li>
+			<li>Add minced garlic and cook for <u>30 seconds</u></li>
+			<li>Add Spaghetti and water/broth. Bring to a boil</li>
+			<li>Cook uncovered, stir occasionally, untill pasta absorbs most of the liquid (10-12 minutes)</li>
+			<li>Season with salt and pepper. Add grated Parmesan or Parsley if you want</li>
+			<li>Enjoy!</li>
 	</body>
 </html>
