--- a/projects/recipes/2.html
+++ b/projects/recipes/2.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Garlic Butter Pasta</h1>
-		<img src="/Garlic Butter Pasta.jpeg" width="250" height="150">
+		<img src="images/Garlic Butter Pasta.jpeg" width="250" height="150">
 		<p>This is my favorite recipe of all time. it may take a while but i think its worth it. i usually have this whenever theres a holiday or its my birthday.</p>
 		<p><strong>Time: </strong>15-20 minutes<br><strong>Servings: </strong>2</p>
 		<p><strong>Ingredients: </strong></p>
