fixed the image problem

--- a/projects/recipes/1.html
+++ b/projects/recipes/1.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Scrambled Eggs with Cheese</h1>
-		<img src="/Users/1001304/Desktop/Scrambled eggs.jpeg" width="250" height="150">
+		<img src="Scrambled eggs.jpeg" width="250" height="150">
 
 		<p>This is a super simple recipe you can make in a short amount of time. My family and i commonly make this for breakfast.</p>
 		<p><strong>Time: </strong>5-7 minutes<br><strong>Servings: </strong>1-2</p>
