--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16 32x32">
 		<title>My Homepage</title>
 		<style>
 		body{
